--- a/home.html
+++ b/home.html
@@ -7,8 +7,9 @@
 
 <body>
 
-<h1> Christopher Pulphus :D </h1>
-    <img src= "Trial.jpg"> 
+<h1> Christopher Pulphus </h1>
+    <img src= "David%20and%20Chris.jpg" style="zoom:50%">
+    <img src= "Art.jpg" style="zoom:50%">
     
     <hr>
     
