--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
 <h1> Christopher Pulphus </h1>
     <img src= "David%20and%20Chris.jpg" style="zoom:50%">
     <img src= "Art.jpg" style="zoom:50%">
+    <img src= "David%20and%20Chris.jpg" style="zoom:50%"> 
     
     <hr>
     
