--- a/home.html
+++ b/home.html
@@ -5,13 +5,13 @@
 
 </head>
 
-<body>
+<body style="color: purple; background-color: black">
 
-<h1> Christopher Pulphus </h1>
+<h1 style="color: purple"> Christopher Pulphus </h1>
     <img src= "David%20and%20Chris.jpg" style="zoom:50%">
     <img src= "Art.jpg" style="zoom:50%">
     
-    <hr>
+    <hr style="color: purple">
     
 <h2> About Me</h2>
 
