--- a/home.html
+++ b/home.html
@@ -8,8 +8,10 @@
 <body style="color: purple; background-color: black">
 
 <h1 style="color: purple"> Christopher Pulphus </h1>
-    <img src= "David%20and%20Chris.jpg" style="zoom:50%">
+
     <img src= "Art.jpg" style="zoom:50%">
+    <img src= "David%20and%20Chris.jpg" style="zoom:50%">
+    <img src= "Screen%20Shot%202015-07-11%20at%204.36.42%20PM.png" style="zoom:60%">
     
     <hr style="color: purple">
     
