--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     
 <h2> About Me</h2>
 
-<p> I am making a website.</p>
+<p> I am an artistic young lad. I can draw, paint, work in photoshop, and now am learning to make a website.</p>
 
     <h3> Sources </h3>
     <ul>
